<!--
code from stop watch tutorial
https://www.geeksforgeeks.org/how-to-create-a-stopwatch-app-using-android-studio/
-->
<resources>
    <!--
    code from stop watch tutorial
    https://www.geeksforgeeks.org/how-to-create-a-stopwatch-app-using-android-studio/
    -->
    <string name="app_name">K-Bots | Stopwatch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

    <!-- From android studio template -->
    <string name="action_settings">Menu</string>
    <string name="first_fragment_label">Fragment 1</string>
    <string name="second_fragment_label">Fragment 2</string>

    <!-- I made these resources -->
    <string name="interval_header">Interval Length</string>
    <string name="break_header">Break Length</string>
    <string name="interval_name">Interval Name</string>
    <string name="default_interval">15</string>
    <string name="default_break">5</string>
</resources>